# rythmo_reflex

./: LICENSE  OUTPUT_README.md  README.md  README_generation.py  generate_readme.py  grab_page.py  grab_screenshot_and_html.py  mcp_server.py  page.html  page_info.json
anomaly_analyzer/: .env.template  .eslintrc.js  .gitignore  USAGE_GUIDE.md  pyproject.toml  rxconfig.py  tsconfig.json
anomaly_analyzer/.github/workflows/: ci.yml
anomaly_analyzer/anomaly_analyzer/: anomaly_analyzer.py  state.py  style.py
anomaly_analyzer/anomaly_analyzer/components/: charts.py  controls.py  data_table.py
anomaly_analyzer/anomaly_analyzer/core/: api_client.py  backtest.py  db.py  etl.py  stats.py
anomaly_analyzer/anomaly_analyzer/pages/: index.py
anomaly_analyzer/scripts/: playwright_mcp_doc_generator.py
anomaly_analyzer/tests/: test_core.py  test_e2e.py  test_ui.py
