[project]
name = "anomaly-analyzer"
version = "0.1.0"
description = "Japan Stock Anomaly Analyzer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reflex==0.8.28.post1",
    "polars",
    "duckdb",
    "vectorbt",
    "statsmodels",
    "python-dotenv",
    "httpx",
    "pandas",
    "scipy",
    "pyarrow",
    "numpy<2.0.0"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "F", "E", "W", "C90", "I", "N", "UP", "YTT", "ANN", "ASYNC", "S", "BLE", "B",
    "A", "C4", "DTZ", "T10", "EM", "ICN", "PIE", "T20", "PT", "RET", "SIM", "TID",
    "ARG", "PTH", "ERA", "PL", "TRY", "RUF"
]
ignore = ["ANN101", "ANN102", "S101", "DTZ001", "PLR2004", "E501", "BLE001", "EM101", "TRY301", "TRY003", "TRY400", "RUF012", "RUF001", "TRY002", "DTZ005", "S608", "ERA001", "C901", "PLR0912", "PLR0915", "PLC0415", "DTZ007"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "playwright>=1.58.0",
    "pytest-playwright>=0.7.2",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.setuptools]
packages = ["anomaly_analyzer"]
